feet: support poll

--- a/src/tailwind-theme.css
+++ b/src/tailwind-theme.css
@@ -11,6 +11,8 @@
   --color-twitter-border-light: #eff3f4;
   --color-twitter-border-strong: #cfd9de;
 
+  --color-twitter-vote-background: #cfd9de;
+
   --color-twitter-text-primary: #0f1419;
   --color-twitter-text-secondary: #536471;
 
@@ -50,6 +52,8 @@
 
     --color-twitter-border-light: #2f3336;
     --color-twitter-border-strong: #536471;
+
+    --color-twitter-vote-background: #333639;
 
     --color-twitter-text-primary: #e7e9ea;
     --color-twitter-text-secondary: #71767b;
